--- a/_config.yml
+++ b/_config.yml
@@ -13,15 +13,15 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Hitchens
-email: hello@patdryburgh.com
+title: Pierre Le Boudec
+email: 
 description: >- # this means to ignore newlines until "baseurl:"
-  An inarguably well-designed Jekyll theme.
-baseurl: "/hitchens" # the subpath of your site, e.g. /blog
-url: "https://patdryburgh.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-icon: /assets/images/icon-512.png
-twitter_username: patdryburgh
-github_username:  patdryburgh
+  SNSF Professor, Universität Basel.
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://pierreleboudec.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+icon: /assets/images/icon.png
+twitter_username: 
+github_username: 
 
 # Build settings
 markdown: kramdown
@@ -43,3 +43,7 @@ plugins:
 
 paginate: 3
 paginate_path: "/page/:num/"
+
+hide_search: true
+
+hide_credits: true
