--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Pierre Le Boudec
 email: 
 description: >- # this means to ignore newlines until "baseurl:"
-  SNSF Professor, Universität Basel.
+  SNSF Professor, Universität Basel
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://pierreleboudec.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 icon: /assets/images/icon.png
